--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.recyclerview:recyclerview:1.3.0' // Recycler View
+    implementation 'com.orhanobut:dialogplus:1.11@aar' // Dialog Plus
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     implementation(platform("com.google.firebase:firebase-bom:32.7.1"))
