--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,13 @@ buildscript {
         //classpath 'com.google.gms:google-services:4.4.0'
         classpath 'com.google.gms:google-services:4.3.14'
     }
+    repositories {
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
