--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 
 dependencies {
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28' // for GIF Image
     implementation 'androidx.recyclerview:recyclerview:1.3.0' // Recycler View
     implementation 'com.orhanobut:dialogplus:1.11@aar' // Dialog Plus
     implementation 'com.applandeo:material-calendar-view:1.7.0' // Applendo Calender
