1)Functionality added for forgotPassword.java as it weather email exists or not 2) Also password lenth toast is added in signup.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,11 @@
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id"
+            />
+
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
